[gd_scene load_steps=8 format=3 uid="uid://buc4xwtqroeec"]

[ext_resource type="Script" uid="uid://bv3m8a34dhaj1" path="res://Scene_UI/gameover.gd" id="1_vkykl"]
[ext_resource type="FontFile" uid="uid://cy3n0hpvkocuu" path="res://Font/yoster.ttf" id="2_lpmls"]
[ext_resource type="Texture2D" uid="uid://b8n7utu8ra13b" path="res://Image/coin/skull.png" id="3_luh5p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eeur3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kctv7"]
bg_color = Color(0.501961, 0.501961, 0.501961, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nw6q"]
bg_color = Color(0.501961, 0.501961, 0.501961, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3x71"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Gameover" type="CanvasLayer"]
script = ExtResource("1_vkykl")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -255.0
offset_top = 257.0
offset_right = 288.0
offset_bottom = 394.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_lpmls")
theme_override_font_sizes/font_size = 100
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node" type="Node" parent="."]

[node name="Label2" type="Label" parent="Node"]
anchors_preset = -1
anchor_left = 0.507
anchor_top = 0.521
anchor_right = 0.507
anchor_bottom = 0.521
offset_left = -59.96
offset_top = 2.19998
offset_right = 10.04
offset_bottom = 32.2
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_lpmls")
theme_override_font_sizes/font_size = 30
text = "coin"

[node name="Button_Retry" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = 111.0
offset_right = 128.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lpmls")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_eeur3")
theme_override_styles/hover = SubResource("StyleBoxFlat_kctv7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2nw6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_w3x71")
text = "Retry"

[node name="Button_Mainmenu" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = 239.0
offset_right = 130.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lpmls")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_eeur3")
theme_override_styles/hover = SubResource("StyleBoxFlat_kctv7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2nw6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_w3x71")
text = "MainMenu"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.5
offset_right = 157.5
offset_bottom = 250.0
grow_horizontal = 2
texture = ExtResource("3_luh5p")

[connection signal="pressed" from="Button_Retry" to="." method="_on_button_retry_pressed"]
[connection signal="pressed" from="Button_Mainmenu" to="." method="_on_button_mainmenu_pressed"]
